# Chess-Engine

./: CMakeLists.txt  Chess Engine.sln  README.md
Chess Engine/: CMakeLists.txt  Chess Engine.vcxproj  Chess Engine.vcxproj.filters
Chess Engine/header/: Chess.h  ChessEngine.h  LTexture.h  optimized_map.h  tree.h
Chess Engine/source/Chess Engine/: EngineMoveMaking.cpp  EngineSearch.cpp  EngineUtil.cpp
Chess Engine/source/Chess Game/: GamePlayMoves.cpp  GameUtil.cpp
Chess Engine/source/Custom Map/: optimized_map.cpp  tree.cpp
Chess Engine/source/SDL Wrapper Classes/: LTexture.cpp
Chess Engine/source/Start Point/: app.cpp
Chess Engine/source/Util/: Globals.cpp
include/: Chess.h  ChessEngine.h  Constants.h  EventHandler.h  Globals.h  LTimer.h  Util.h  app.h
src/Chess Engine/: EngineDebugFuncs.cpp  EngineEvaluatePosition.cpp  EngineMoveGeneration.cpp  EngineMoveMaking.cpp  EngineSearch.cpp  EngineUtil.cpp  EngineZobristHashing.cpp
src/Chess Game/: GameMoveGeneration.cpp  GamePieceMoves.cpp  GamePlayMoves.cpp  GameRender.cpp
src/Start Point/: app.cpp  main.cpp
src/Util/: EventHandler.cpp  Globals.cpp  Util.cpp
